--- a/cov.html
+++ b/cov.html
@@ -3,6 +3,8 @@
 <html>
 	<head>
 		<title>Stay Safe Covid-19 | World 2020</title>
+		<link rel="stylesheet" type="text/css" href="cov1.css">
+		<script src="cov2.js"></script>      
 	</head>
 	<body>
 		<canvas id="canvas"></canvas>
